3_TypeChecking/test/good/good05.cc
void main() {
	bool b = false;
	int i = 1;
	
	while(b) {
		i = 2;
	}
}