3_TypeChecking/test/bad/bad06.cc
int main() {
  bool i;

  return i;
}
